# ffi-dsl

./: .gitignore  DSL.hs  DSLFFI.hs  Main.hs  README.md  ffi-dsl.cabal  test.c  test.h
examples/free/: DSLFFI.hs  Main.hs  Makefile  test.c
src/Foreign/: DSL.hs
src/Foreign/DSL/: Internal.hs
