Name:                   ffi-dsl
Version:                0.1.0
Author:                 Nickolay Kudasov<nickolay.kudasov@gmail.com>
Maintainer:             Nickolay Kudasov<nickolay.kudasov@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Exporting Haskell abstract DSL through the FFI.
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Foreign.DSL
  Other-Modules:        Foreign.DSL.Internal
  Build-Depends:        base >= 4 && < 5
                      , monad-parallel >= 0.7.1.1 
                      , stm >= 2.3
                      , ivar-simple >= 0.3

Source-Repository head
  Type:                 git
  Location:             https://github.com/fizruk/ffi-dsl.git
